--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.7",
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0",
     "tailwindcss": "^4.0.7"
   },
   "engines": {
