--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "vinxi start"
+    "start": "vinxi start",
+    "fmt": "prettier --write .",
+    "fmt.check": "prettier --check ."
   },
   "dependencies": {
     "@solidjs/router": "^0.15.0",
@@ -13,9 +15,13 @@
     "vinxi": "^0.5.7"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@tailwindcss/vite": "^4.0.7",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-css-order": "^2.1.2",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "tailwindcss": "^4.0.7"
   },
   "engines": {
