--- a/.mergify.yml
+++ b/.mergify.yml
@@ -3,6 +3,7 @@ pull_request_rules:
   - name: automatic approval
     conditions:
       - author=dsm23
+      - check-success=build
       - check-success=format
     actions:
       review:
@@ -11,6 +12,7 @@ pull_request_rules:
   - name: automatic approval for Renovate pull requests
     conditions:
       - author=renovate[bot]
+      - check-success=build
       - check-success=format
     actions:
       review:
@@ -19,6 +21,7 @@ pull_request_rules:
   # merge
   - name: Automatically merge when GitHub Actions jobs succeed
     conditions:
+      - check-success=build
       - check-success=format
       - "#approved-reviews-by>=1"
     actions:
