ci: add gitleaks pipeline

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,6 +5,7 @@ pull_request_rules:
       - author=dsm23
       - check-success=build
       - check-success=format
+      - check-success=gitleaks
     actions:
       review:
         type: APPROVE
@@ -14,6 +15,7 @@ pull_request_rules:
       - author=renovate[bot]
       - check-success=build
       - check-success=format
+      - check-success=gitleaks
     actions:
       review:
         type: APPROVE
@@ -23,6 +25,7 @@ pull_request_rules:
     conditions:
       - check-success=build
       - check-success=format
+      - check-success=gitleaks
       - "#approved-reviews-by>=1"
     actions:
       merge:
