ci: add dependency review pipeline

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,6 +4,7 @@ pull_request_rules:
     conditions:
       - author=dsm23
       - check-success=build
+      - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
     actions:
@@ -14,6 +15,7 @@ pull_request_rules:
     conditions:
       - author=renovate[bot]
       - check-success=build
+      - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
     actions:
@@ -24,6 +26,7 @@ pull_request_rules:
   - name: Automatically merge when GitHub Actions jobs succeed
     conditions:
       - check-success=build
+      - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
       - "#approved-reviews-by>=1"
