--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,6 +10,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=zizmor
     actions:
       review:
         type: APPROVE
@@ -24,6 +25,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=zizmor
     actions:
       review:
         type: APPROVE
@@ -38,6 +40,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=zizmor
       - "#approved-reviews-by>=1"
     actions:
       merge:
