--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "fmt.check": "prettier --check ."
   },
   "dependencies": {
+    "@kobalte/core": "0.13.10",
     "@solidjs/router": "0.15.3",
     "@solidjs/start": "1.1.5",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "solid-js": "1.9.7",
+    "tailwind-merge": "3.3.1",
     "vinxi": "0.5.7"
   },
   "devDependencies": {
@@ -22,7 +26,8 @@
     "prettier": "3.6.0",
     "prettier-plugin-css-order": "2.1.2",
     "prettier-plugin-tailwindcss": "0.6.13",
-    "tailwindcss": "4.1.10"
+    "tailwindcss": "4.1.10",
+    "tw-animate-css": "1.3.4"
   },
   "engines": {
     "node": ">=22"
