--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "vinxi": "0.5.7"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "@commitlint/types": "19.8.1",
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
     "@tailwindcss/vite": "4.1.10",
     "commitizen": "4.3.1",
