ci(git hooks): add lefthook

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/vite": "4.1.10",
     "commitizen": "4.3.1",
     "cz-conventional-changelog": "3.3.0",
+    "lefthook": "1.11.14",
     "prettier": "3.6.0",
     "prettier-plugin-css-order": "2.1.2",
     "prettier-plugin-tailwindcss": "0.6.13",
