--- a/.mergify.yml
+++ b/.mergify.yml
@@ -10,6 +10,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=pr-title
       - check-success=zizmor
     actions:
       review:
@@ -25,6 +26,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=pr-title
       - check-success=zizmor
     actions:
       review:
@@ -40,6 +42,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=pr-title
       - check-success=zizmor
       - "#approved-reviews-by>=1"
     actions:
