--- a/.mergify.yml
+++ b/.mergify.yml
@@ -11,6 +11,7 @@ pull_request_rules:
       - check-success=format
       - check-success=gitleaks
       - check-success=pr-title
+      - check-success=renovate
       - check-success=zizmor
     actions:
       review:
@@ -27,6 +28,7 @@ pull_request_rules:
       - check-success=format
       - check-success=gitleaks
       - check-success=pr-title
+      - check-success=renovate
       - check-success=zizmor
     actions:
       review:
@@ -43,6 +45,7 @@ pull_request_rules:
       - check-success=format
       - check-success=gitleaks
       - check-success=pr-title
+      - check-success=renovate
       - check-success=zizmor
       - "#approved-reviews-by>=1"
     actions:
