--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "prettier-plugin-css-order": "2.1.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "tailwindcss": "4.1.11",
-    "tw-animate-css": "1.3.5"
+    "tw-animate-css": "1.3.5",
+    "typed-query-selector": "2.12.0"
   },
   "engines": {
     "node": ">=22"
