--- a/.mergify.yml
+++ b/.mergify.yml
@@ -13,6 +13,7 @@ pull_request_rules:
       - check-success=gitleaks
       - check-success=pr-title
       - check-success=renovate
+      - check-success=unit-testing
       - check-success=zizmor
     actions:
       review:
@@ -31,6 +32,7 @@ pull_request_rules:
       - check-success=gitleaks
       - check-success=pr-title
       - check-success=renovate
+      - check-success=unit-testing
       - check-success=zizmor
     actions:
       review:
@@ -49,6 +51,7 @@ pull_request_rules:
       - check-success=gitleaks
       - check-success=pr-title
       - check-success=renovate
+      - check-success=unit-testing
       - check-success=zizmor
       - "#approved-reviews-by>=1"
     actions:
