--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vinxi build",
     "start": "vinxi start",
     "fmt": "prettier --write .",
-    "fmt.check": "prettier --check ."
+    "fmt.check": "prettier --check .",
+    "test": "vitest"
   },
   "dependencies": {
     "@kobalte/core": "0.13.11",
@@ -23,15 +24,24 @@
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@commitlint/types": "19.8.1",
+    "@fast-check/vitest": "0.2.2",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
+    "@solidjs/testing-library": "0.8.10",
     "@tailwindcss/vite": "4.1.13",
+    "@testing-library/jest-dom": "6.8.0",
+    "@testing-library/user-event": "14.6.1",
+    "@vitest/coverage-v8": "3.2.4",
+    "jsdom": "26.1.0",
     "lefthook": "1.12.3",
     "prettier": "3.6.2",
     "prettier-plugin-css-order": "2.1.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "tailwindcss": "4.1.13",
     "tw-animate-css": "1.3.8",
-    "typed-query-selector": "2.12.0"
+    "typed-query-selector": "2.12.0",
+    "vite-plugin-solid": "2.11.8",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.4"
   },
   "engines": {
     "node": ">=22"
