--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "vinxi start",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
-    "test": "vitest"
+    "test": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@kobalte/core": "0.13.11",
@@ -21,21 +23,29 @@
     "vinxi": "0.5.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "4.1.1",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@commitlint/types": "19.8.1",
     "@fast-check/vitest": "0.2.2",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
+    "@playwright/test": "1.55.0",
     "@solidjs/testing-library": "0.8.10",
+    "@storybook/addon-docs": "9.1.4",
+    "@storybook/addon-links": "9.1.4",
+    "@storybook/addon-vitest": "9.1.4",
     "@tailwindcss/vite": "4.1.13",
     "@testing-library/jest-dom": "6.8.0",
     "@testing-library/user-event": "14.6.1",
+    "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "jsdom": "26.1.0",
     "lefthook": "1.12.3",
     "prettier": "3.6.2",
     "prettier-plugin-css-order": "2.1.2",
     "prettier-plugin-tailwindcss": "0.6.14",
+    "storybook": "^9.1.4",
+    "storybook-solidjs-vite": "^9.0.3",
     "tailwindcss": "4.1.13",
     "tw-animate-css": "1.3.8",
     "typed-query-selector": "2.12.0",
