--- a/.mergify.yml
+++ b/.mergify.yml
@@ -11,6 +11,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=helm
       - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
@@ -31,6 +32,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=helm
       - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
@@ -51,6 +53,7 @@ pull_request_rules:
       - check-success=dependency-review
       - check-success=format
       - check-success=gitleaks
+      - check-success=helm
       - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
