--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tailwindcss/vite": "4.1.15",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/user-event": "14.6.1",
+    "@total-typescript/ts-reset": "0.6.1",
     "@vitest/browser": "3.2.4",
     "@vitest/coverage-v8": "3.2.4",
     "jsdom": "27.0.1",
