test(playwright): add playwright tests

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -12,6 +12,7 @@ pull_request_rules:
       - check-success=format
       - check-success=gitleaks
       - check-success=helm
+      - check-success=playwright-tests
       - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
@@ -33,6 +34,7 @@ pull_request_rules:
       - check-success=format
       - check-success=gitleaks
       - check-success=helm
+      - check-success=playwright-tests
       - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
@@ -57,6 +59,7 @@ pull_request_rules:
       - check-success=format
       - check-success=gitleaks
       - check-success=helm
+      - check-success=playwright-tests
       - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
