--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ Thumbs.db
 
 *storybook.log
 storybook-static
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
