--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vinxi": "0.5.8"
   },
   "devDependencies": {
+    "@axe-core/playwright": "4.11.0",
     "@chromatic-com/storybook": "4.1.3",
     "@commitlint/cli": "20.2.0",
     "@commitlint/config-conventional": "20.2.0",
@@ -30,6 +31,7 @@
     "@fast-check/vitest": "0.2.3",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
     "@playwright/test": "1.57.0",
+    "@solidjs/meta": "0.29.4",
     "@solidjs/testing-library": "0.8.10",
     "@storybook/addon-docs": "10.1.4",
     "@storybook/addon-links": "10.1.4",
@@ -38,8 +40,10 @@
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/user-event": "14.6.1",
     "@total-typescript/ts-reset": "0.6.1",
+    "@types/node": "24.10.2",
     "@vitest/browser-playwright": "4.0.15",
     "@vitest/coverage-v8": "4.0.15",
+    "dotenv": "17.2.3",
     "jsdom": "27.2.0",
     "lefthook": "2.0.8",
     "prettier": "3.7.4",
