--- a/renovate.json
+++ b/renovate.json
@@ -31,6 +31,8 @@
     }
   ],
   "ignoreDeps": ["ghcr.io/dsm23/dsm23-solid-start-template"],
+  "internalChecksFilter": "strict",
+  "minimumReleaseAge": "3 days",
   "packageRules": [
     {
       "extends": ["packages:eslint"],
