--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,3 +1,23 @@
+merge_protections:
+  - name: Do not merge outdated PRs
+    description: Make sure PRs are almost up to date before merging
+    if:
+      - base = main
+    success_conditions:
+      - "#commits-behind = 0"
+  - name: Enforce conventional commit
+    description: Make sure that we follow https://www.conventionalcommits.org/en/v1.0.0/
+    if:
+      - base = main
+    success_conditions:
+      - "title ~=
+        ^(fix|feat|docs|style|refactor|perf|test|build|ci|chore|revert)(?:\\(.+\
+        \\))?:"
+
+merge_protections_settings:
+  reporting_method: check-runs
+  post_comment: true
+
 pull_request_rules:
   # approve
   - name: automatic approval
@@ -13,7 +33,6 @@ pull_request_rules:
       - check-success=gitleaks
       - check-success=helm
       - check-success=playwright-tests
-      - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
       - check-success=unit-testing
@@ -35,7 +54,6 @@ pull_request_rules:
       - check-success=gitleaks
       - check-success=helm
       - check-success=playwright-tests
-      - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
       - check-success=unit-testing
@@ -60,7 +78,6 @@ pull_request_rules:
       - check-success=gitleaks
       - check-success=helm
       - check-success=playwright-tests
-      - check-success=pr-title
       - check-success=renovate
       - check-success=smoke-test
       - check-success=unit-testing
